Remove unnecessary refactoring